# getise

./: README.md  pyproject.toml
src/getise/: __init__.py  cli.py  exceptions.py
tests/: test_bgpneiget.py  test_getise.py
