[tool.poetry]
name = "bgpneiget"
version = "2.0.0"
description = "Get BGP Neighbours from network devices"
authors = ["Rob Woodward <rob@emailplus.org>"]

license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/robwdwd/bgpneiget"
include = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]


[tool.poetry.scripts]
bgpneiget = "bgpneiget.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
