[tool.poetry]
name = "getise"
version = "2.0.0"
description = "Get networks and devices from Cisco ISE"
authors = ["Rob Woodward <rob@emailplus.org>"]

license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/robwdwd/getise"
include = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
requests = "^2.29.0"
gitpython = "^3.1.43"
netaddr = "^1.3.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^7.1.1"
black = "^24.8.0"
pytest = "^8.3.2"
pydocstyle = "^6.3.0"
pylint = "^3.2.7"


[tool.poetry.scripts]
getise = "getise.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
